--- a/style.css
+++ b/style.css
@@ -17,3 +17,17 @@ body {
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
+/* Styling for the calculator screen */
+.calculator-screen {
+  width: 100%;
+  height: 80px;
+  border: none;
+  background-color: #252525;
+  color: #fff;
+  text-align: right;
+  padding: 0 20px;
+  font-size: 2.5rem;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
