--- a/style.css
+++ b/style.css
@@ -55,3 +55,9 @@ button {
 button:hover {
   background-color: #f1f1f1;
 }
+
+/* Specific styling for operator buttons */
+.operator {
+  background-color: #f5923e;
+  color: #fff;
+}
